added spaces between titles and sections and tech stack, centered the social icons in desktop view and added a resume button, fixed streched issue on the linkedin icon, and moved the education side to align with the left

--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
             <div class="navbar">
                 <div class="navbar-right">
                     <ul class="navigation">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#education-section">Education</a></li>
+                        <li class="nav-item"><a href="#">Home</a></li>
+                        <li class="nav-item"><a href="#about">About</a></li>
+                        <li class="nav-item"><a href="#projects">Projects</a></li>
+                        <li class="nav-item"><a href="#education-section">Education</a></li>
                     </ul>
                 </div>
             </div>
@@ -224,6 +224,18 @@
                         <div class="linkedin-custom-badge">
                             <img src="./images/social_icons/EmailIcon.png" alt="Email Icon" class="social-icon">
                     
+                        </div>
+                </a>
+
+                <!-- Resume Download -->
+                <a href="https://www.dropbox.com/scl/fi/ylup48a9q1ysmnepmp82v/TechCV_JaineshSingh_2025_March.pdf?rlkey=7ekdwbcvxm709m897mi3nd119&st=2u2so9h6&dl=1" 
+                    class="linkedin-link" 
+                    download="TechCV_JaineshSingh_2025_PDF.pdf"
+                    target="_self"
+                    rel="noopener"
+                    aria-label="Download Jasstej's Resume">
+                        <div class="linkedin-custom-badge">
+                            <img src="./images/social_icons/resume.png" alt="Resume Icon" class="social-icon">
                         </div>
                 </a>
 
