--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
                 </a>
 
                 <!-- Resume Download -->
-                <a href="https://www.dropbox.com/scl/fi/ylup48a9q1ysmnepmp82v/TechCV_JaineshSingh_2025_March.pdf?rlkey=7ekdwbcvxm709m897mi3nd119&st=2u2so9h6&dl=1" 
+                <a href="https://www.dropbox.com/scl/fi/v33x76dfcdzbaoizqyi1y/PlacementCV.pdf?rlkey=zat6dvigars487394ksnk5ywj&e=1&st=jkmcppy7&dl=1" 
                     class="linkedin-link" 
-                    download="TechCV_JaineshSingh_2025_PDF.pdf"
+                    download="PlacementCV.pdf"
                     target="_self"
                     rel="noopener"
                     aria-label="Download Jasstej's Resume">
